# MyRepo

./: LICENSE.txt  README.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
ci/: run_formatter.sh  run_linter.sh  setup_hooks.sh
myrepo/: data_pipeline.py
tests/: test_import.py
